--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-.idea/
-.vscode/
+vscode/
 node_modules/
-build/
-.DS_Store
-*.tgz
-my-app*
-template/src/__tests__/__snapshots__/
-lerna-debug.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/.changelog
-.npm/
+package-lock.json
